--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -108,8 +108,8 @@
 				</div>
 				<div id="sys-message" class="ui-widget ui-widget-content ui-corner-all">
 					<b>System Message</b>: 
-					Sept 14 - 
-					Expect the update early next week... few more features popped up that I'll be finishing up over the weekend. This will be the biggest and probably best update the site's ever seen, stay tuned!
+					Sept 17 - 
+					A <a href="http://d3up.com/update/31">small status update</a> with a preview of what's to come, hopefully this week.
 					Please report any bugs/problems/issues to me at <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>!
 				</div>
 			</div>
