Primarily working on Skill changes

--- a/application/layouts/scripts/_menu.phtml
+++ b/application/layouts/scripts/_menu.phtml
@@ -11,7 +11,9 @@
 	}
 
 	#megamenu * {
-		box-sizing: content-box;
+		-webkit-box-sizing: content-box;
+    -moz-box-sizing: content-box;
+    box-sizing: content-box;
 	}
 
 	#megamenu > li a,
@@ -101,6 +103,7 @@
 		text-shadow: 1px 1px 1px #000;
 	}
 	#megamenu h2 {
+	  color: #B18135;
 		font-size:21px;
 		font-weight:400;
 		letter-spacing:-1px;
