--- a/application/layouts/scripts/menu/user.phtml
+++ b/application/layouts/scripts/menu/user.phtml
@@ -1,7 +1,7 @@
 <h5><a href="/" class="drop">My D3Up.com</a></h5>
 <span><a href="/" class="drop">Builds, Guides and Items</a></span>
 <div class="dropdown_3columns">
-	<div class="col_1">
+	<div class="col_1 col_first">
 		<h2 style="margin-bottom: 0">Quick Access</h2>
 	</div>
 	<div class="col_1">
@@ -10,7 +10,7 @@
 	<div class="col_1">
 		<h2>My Guides</h2>
 	</div>
-	<div class="col_1">
+	<div class="col_1 col_first">
 		<p><a class="button" href="/user/builds">My Builds</a></p>
 		<p><a class="button" href="/user/guides">My Guides</a></p>
 		<p><a class="button" href="/user/items">My Items</a></p>
