--- a/application/views/scripts/record/crawl.phtml
+++ b/application/views/scripts/record/crawl.phtml
@@ -1,5 +1,5 @@
 <div id="build-create" class='content-page'>
-	<div class='featured title-block' data-class="<?= $this->featured->class ?: 'all' ?>">
+	<div class='featured title-block'>
 		<h5 style='color: #B18135'>Copy from Battle.net Character Profile</h5>
 		<h2><a href="/build/create">D3Up.com Armory Copy</a></h2>
 	<? if($this->status): ?>
