--- a/application/layouts/scripts/menu/nouser.phtml
+++ b/application/layouts/scripts/menu/nouser.phtml
@@ -1,13 +1,13 @@
 <h5><a href="/build/create" class="drop">Getting Started</a></h5>
 <span>Start using the EHP/DPS Calc</span>
 <div class="dropdown_4columns">
-	<div class="col_2">
+	<div class="col_2 col_first">
 		<h2>Ready to use the Calculator?</h2>
 	</div>
 	<div class="col_2">
 		<h2>Login or Register for Full Control</h2>
 	</div>
-	<div class="col_2">
+	<div class="col_2 col_first">
 		<p>You can either create a character from scratch or import directly from your Diablo 3 Armory profile! Click below to get started using our tools.</p>
 		<p><a class="button" href="/build/create">Create/Import your Character Build</a></p>
 		<h3>Need more info on creating a build?</h3>
