--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -23,6 +23,7 @@
 			->appendFile("/js/chosen.jquery.js")
 			->appendFile("/js/site.js")
 			->appendFile("/js/jquery.diff.js")
+			->appendFile("/js/jquery.color.js")
 			->appendFile("/js/skills.js")
 			->appendFile("/js/tooltip.js")
 			->appendFile("/js/unmin/itembuilder.js")
