--- a/application/views/scripts/record/build.phtml
+++ b/application/views/scripts/record/build.phtml
@@ -194,7 +194,7 @@ var activeActives = [];
           tabs = $("#tabs-render"),
           atabs = $("#tabs-render > div");
       atabs.hide();
-      tabs.children("#skills").show();
+      tabs.children("#gear").show();
       controls.bind('click',function(){
         atabs.hide();
         controls.removeClass('current');
