--- a/application/views/scripts/user/_shop-interface.phtml
+++ b/application/views/scripts/user/_shop-interface.phtml
@@ -205,7 +205,7 @@
 								link = $('<a class="quality-'+item.quality+'" href="/i/'+item.id+'">'+item.name+'</a>').attr("data-json", JSON.stringify(v.item)),
 								tr = $("<tr class='item-row'/>");
 						link.bindTooltip();
-						// console.log(item);
+						// d3up.log(item);
 						tr.append($("<td/>").append(link));
 						tr.append($("<td class='sold-"+v.status+"'/>").append('<img src="/images/' + v.method + '.png"> ' + v.price));
 						tr.append($("<td/>").append(v.date));
