Few menu updates and the new Gear Compare tool.

--- a/application/layouts/scripts/_menu.phtml
+++ b/application/layouts/scripts/_menu.phtml
@@ -194,6 +194,12 @@
 		cursor: pointer;		
 		overflow: hidden;
 	}
+	#megamenu li ul.dropdown_links li.build a {
+	  line-height: 21px;
+	}
+	#megamenu li ul.dropdown_links .paragon {
+	 color: #A791C2;
+	}
 	#megamenu li ul.dropdown_links li:hover {
 		background-color: #333;
 	}
