--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -25,6 +25,7 @@
 			->appendFile("/js/jquery.diff.js")
 			->appendFile("/js/jquery.color.js")
 			->appendFile("/js/skills.js")
+			->appendFile("/js/peity.js")
 			->appendFile("/js/tooltip.js")
 			->appendFile("/js/unmin/itembuilder.js")
 			->appendFile("/js/unmin/calcv2.js")
