--- a/application/views/scripts/item/create.phtml
+++ b/application/views/scripts/item/create.phtml
@@ -12,7 +12,7 @@
 </div>
 <script type="text/javascript">
 // Establish the Builder
-var builder = Object.create(itemBuilder);
+var builder = new d3up.ItemBuilder;
 // Set the Name Field
 builder.setNameInput($("#name"));
 // Set the Quality Selector
